--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>I am Using git And GitHUb</h1>
+    <h1>I am Using git And GitHUb</h1>
+    <h1>I am Using git And GitHUb</h1>
 </body>
 </html>
